tests/lean/nameArgErrorIssue.lean.expected.out
bla 5 2 : Nat
nameArgErrorIssue.lean:5:20-5:24: error: Application type mismatch: In the application
  bla "hi"
the argument
  "hi"
has type
  String : Type
but is expected to have type
  Nat : Type
bla sorry 5 : Nat
nameArgErrorIssue.lean:6:20-6:24: error: Application type mismatch: In the application
  bla "hi"
the argument
  "hi"
has type
  String : Type
but is expected to have type
  Nat : Type
nameArgErrorIssue.lean:6:11-6:19: error: Invalid argument name `z` for function `bla`

Note: This function has the following named parameters: `x` and `y`
nameArgErrorIssue.lean:7:11-7:19: error: Invalid argument name `z` for function `bla`

Note: This function has the following named parameters: `x` and `y`
